--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.20+build.1
 loader_version=0.14.10
 
 # Mod Properties
-mod_version=2.2.0
+mod_version=2.2.0-1.20
 maven_group=com.github.voxxin.cape_cacher
 archives_base_name=cape_cacher
 
